--- a/ReactTest/my-react-app/package.json
+++ b/ReactTest/my-react-app/package.json
@@ -9,7 +9,10 @@
     "primereact": "^10.6.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1"
+    "react-hook-form": "^7.51.4",
+    "react-router-dom": "^6.23.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
